修改配置数据